--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
-   "“name”": "node-app",
-   "“description”": "hello jenkins test app",
-   "“version”": "0.0.1",
-   "“private”": true,
-   "“dependencies”": {
-      "“express”": "3.12.0"
+   "name": "cicd-test",
+   "version": "1.0.1",
+   "description": "",
+   "main": "index.js",
+   "scripts": {
+      "test": "mocha --exit"
    },
-   "“devDependencies”": {
-      "“mocha”": "1.20.1",
-      "“supertest”": "0.13.0"
+   "author": "",
+   "license": "ISC",
+   "dependencies": {
+      "express": "^4.16.4"
+   },
+   "devDependencies": {
+      "mocha": "^5.2.0",
+      "supertest": "^3.3.0"
    }
 }
