--- a/package.json
+++ b/package.json
@@ -1,18 +1,13 @@
 {
-   "name": "cicd-test",
-   "version": "1.0.1",
-   "description": "",
-   "main": "index.js",
+   "name": "docker_web_app",
+   "version": "1.0.0",
+   "description": "Node.js on Docker",
+   "author": "First Last <first.last@example.com>",
+   "main": "server.js",
    "scripts": {
-      "test": "mocha --exit"
+      "start": "node server.js"
    },
-   "author": "",
-   "license": "ISC",
    "dependencies": {
-      "express": "^4.16.4"
-   },
-   "devDependencies": {
-      "mocha": "^5.2.0",
-      "supertest": "^3.3.0"
+      "express": "^4.16.1"
    }
 }
